--- a/index.html
+++ b/index.html
@@ -32,22 +32,16 @@
     <img src="https://youthful-lamport-4a66d3.netlify.app/img/fun-bus.jpg" 
      alt="bus">
   </div> 
-    <section class="content-section">
+    <section class="first-content">
       <div class="welcome">
-        <h1>Welcom To Fun Bus!</h1>
+        <h1>Welcome To Fun Bus!</h1>
         <p>Traveling expedition modern, clean webdesign blogger clean 
           website theme website modern. Design pretty design, travelblogger 
           adventure WordPress wanderlust theme blogger website expedition 
           theme travelblogger. Adventure fun traveler pretty design website 
           expedition.</p>
-
-
-
-
       </div>
-
-
-
+      </section>
       <div class="text-content">
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
