--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Bill Bus Travel Agency - Solution</title>
+  <title>Fun Bus Travel Agency - Solution</title>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
@@ -42,13 +42,13 @@
           expedition.</p>
       </div>
       </section>
-      <div class="text-content">
+      <div class="text-content-1">
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
       </div>
       <div class="img-content-1">
-        <img src="img/adventure.jpg" alt="Let's go on an adventure!">
+        <img src="img/adventure.jpg" class="map" alt="Let's go on an adventure!">
       </div>
     </section>
     <section class="content-section inverse-content">
