--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fun Bus Travel Agency - Solution</title>
 
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Roboto" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
-
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
@@ -16,43 +16,38 @@
 
 <body>
 
-  
-     
-  <div class="container-home">
-    <header>
-      <nav>    
-        <h1>Fun Bus</h1>
-        <a href="">Home</a>
-        <a href="">About Us</a>
-        <a href="">Blog</a>
-        <a href="">Contact</a>
-      </nav>
-    </header>
-  <div class="bus">
-    <img src="https://youthful-lamport-4a66d3.netlify.app/img/fun-bus.jpg" 
-     alt="bus">
+
+  <div class="navbar">
+    <h1 id="fun">Fun Bus</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
   </div> 
-    <section class="first-content">
-      <div class="welcome">
-        <h1>Welcome To Fun Bus!</h1>
-        <p>Traveling expedition modern, clean webdesign blogger clean 
-          website theme website modern. Design pretty design, travelblogger 
-          adventure WordPress wanderlust theme blogger website expedition 
-          theme travelblogger. Adventure fun traveler pretty design website 
-          expedition.</p>
-      </div>
-      </section>
-      <div class="text-content-1">
+<section class="container">
+<img id="bus" src="img/fun-bus.jpg" alt="yellow toy bus">
+   <section id="top">
+     <h1>Welcome To Fun Bus!</h1>
+     <p class="top">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error distinctio id vero fugiat. Quam, blanditiis sequi? Quibusdam unde odit quam corporis labore! Perspiciatis velit at nam aliquid voluptas tempora nobis.</p>
+   </section>  
+</section>
+
+  <div class="container home">
+
+    <section class="content-section">
+      <div class="text-content">
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
       </div>
-      <div class="img-content-1">
-        <img src="img/adventure.jpg" class="map" alt="Let's go on an adventure!">
+      <div class="img-content">
+        <img src="img/adventure.jpg" alt="Let's go on an adventure!">
       </div>
     </section>
     <section class="content-section inverse-content">
-      <div class="img-content-2">
+      <div class="img-content">
           <img src="img/fun.jpg" class="img-fluid rounded" alt="Lets have fun!">
       </div>
       <div class="text-content">
@@ -68,7 +63,6 @@
       <img src="img/destination.jpg" alt="Second slide">
     </section>
     <section class="content-pick">
-
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
@@ -86,10 +80,8 @@
       </div>
     </section>
   </div><!-- container -->
-
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
   </footer>
-
 </body>
 </html>
